[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obed"
version = "0.0.4"
dependencies = [
  "cmd2",
  "jmespath"
]
authors = [
  { name="terasik" },
]
description = "interactiv object edit"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/terasik/inter"
Issues = "https://github.com/terasik/inter"

[project.scripts]
obed = "obed.obed:run"
